--- a/content/1.getting-started/_dir.yml
+++ b/content/1.getting-started/_dir.yml
@@ -1,3 +1,3 @@
-title: Getting started
-icon: lucide:rocket
-navigation.redirect: /getting-started/introduction
+title: Onboarding
+icon: solar:rocket-outline
+navigation.redirect: /getting-started/onboarding
