--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxi build --preset=cloudflare_pages && wrangler pages deploy dist/"
   },
   "dependencies": {
     "nuxt": "^3.12.2",
