--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "nuxi build --preset=cloudflare_pages && wrangler pages deploy dist/"
+    "pages:deploy": "nuxi build --preset=cloudflare_pages && wrangler pages deploy dist/"
   },
   "dependencies": {
     "nuxt": "^3.12.2",
