--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "nuxt": "^3.12.2",
-    "shadcn-docs-nuxt": "latest",
+    "shadcn-docs-nuxt": "0.4.0",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "wrangler": "^3.63.1"
+    "wrangler": "^3.63.2",
+    "unenv": "^1.9.0"
   }
 }
